--- a/style.css
+++ b/style.css
@@ -35,3 +35,18 @@ button
     border-radius: 10px;
     background-color: blanchedalmond;
 }
+
+form
+{
+    background-color: rgb(104, 0, 0);
+    padding: 25px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+#readDiv
+{
+}
